--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "Unity"]
-	path = lib/unity
-	url = https://github.com/ThrowTheSwitch/Unity
 [submodule "lib/scripts"]
 	path = lib/scripts
 	url = https://github.com/djboni/tdd-scripts
+[submodule "lib/cpputest"]
+	path = lib/cpputest
+	url = https://github.com/cpputest/cpputest
