--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/boost"]
 	path = lib/boost
 	url = https://github.com/boostorg/boost
+[submodule "lib/cmock"]
+	path = lib/cmock
+	url = https://github.com/ThrowTheSwitch/CMock
